--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,7 @@
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
 <script src="scripts/components/pleb.component.js"></script>
+<script src="scripts/components/about.component.js"></script>
 <!-- endbuild -->
 </body>
 
